subdir('generators')
subdir('include')
subdir('src')

e_external_grammars = {
    'ecmd': {
        'git': 'https://github.com/Gottox/tree-sitter-ecmd',
        'rev': 'main',
        'run_npm': 'root',
    },
    #'ada': {'git': 'https://github.com/briot/tree-sitter-ada', 'rev': 'master'},
    #'agda': {
    #    'git': 'https://github.com/tree-sitter/tree-sitter-agda',
    #    'rev': 'master',
    #},
    #'bash': {
    #    'git': 'https://github.com/tree-sitter/tree-sitter-bash',
    #    'rev': 'master',
    #},
    #'beancount': {
    #    'git': 'https://github.com/zwpaper/tree-sitter-beancount',
    #    'rev': 'main',
    #},
    #'c_sharp': {
    #    'git': 'https://github.com/tree-sitter/tree-sitter-c-sharp',
    #    'rev': 'master',
    #},
    'c': {
        'git': 'https://github.com/tree-sitter/tree-sitter-c',
        'rev': 'v0.20.7',
    },
    #'capnp': {
    #    'git': 'https://github.com/amaanq/tree-sitter-capnp',
    #    'rev': 'master',
    #},
    #'clojure': {
    #    'git': 'https://github.com/sogaiu/tree-sitter-clojure',
    #    'rev': 'master',
    #},
    #'cmake': {
    #    'git': 'https://github.com/uyha/tree-sitter-cmake',
    #    'rev': 'master',
    #},
    #'comment': {
    #    'git': 'https://github.com/stsewd/tree-sitter-comment',
    #    'rev': 'master',
    #},
    ## Static type check fails
    ##'commonlisp': {
    ##    'git': 'https://github.com/theHamsta/tree-sitter-commonlisp',
    ##    'rev': 'v0.3.1',
    ##    'run_npm': '.',
    ##},
    #'cpp': {
    #    'git': 'https://github.com/tree-sitter/tree-sitter-cpp',
    #    'rev': 'master',
    #    'run_npm': 'root',
    #},
    #'css': {
    #    'git': 'https://github.com/tree-sitter/tree-sitter-css',
    #    'rev': 'master',
    #},
    #'cuda': {
    #    'git': 'https://github.com/theHamsta/tree-sitter-cuda',
    #    'rev': 'master',
    #    'run_npm': 'root',
    #},
    #'d': {'git': 'https://github.com/gdamore/tree-sitter-d', 'rev': 'main'},
    #'dart': {
    #    'git': 'https://github.com/UserNobody14/tree-sitter-dart',
    #    'rev': 'master',
    #},
    #'dockerfile': {
    #    'git': 'https://github.com/camdencheek/tree-sitter-dockerfile',
    #    'rev': 'main',
    #},
    #'dot': {'git': 'https://github.com/rydesun/tree-sitter-dot', 'rev': 'main'},
    #'elisp': {
    #    'git': 'https://github.com/Wilfred/tree-sitter-elisp',
    #    'rev': 'main',
    #},
    #'elixir': {
    #    'git': 'https://github.com/elixir-lang/tree-sitter-elixir',
    #    'rev': 'main',
    #},
    #'elm': {
    #    'git': 'https://github.com/elm-tooling/tree-sitter-elm',
    #    'rev': 'main',
    #},
    #'embedded_template': {
    #    'git': 'https://github.com/tree-sitter/tree-sitter-embedded-template',
    #    'rev': 'master',
    #},
    #'eno': {'git': 'https://github.com/eno-lang/tree-sitter-eno', 'rev': 'main'},
    #'erlang': {
    #    'git': 'https://github.com/WhatsApp/tree-sitter-erlang',
    #    'rev': 'main',
    #},
    #'fennel': {
    #    'git': 'https://github.com/travonted/tree-sitter-fennel',
    #    'rev': 'master',
    #},
    #'fish': {
    #    'git': 'https://github.com/ram02z/tree-sitter-fish',
    #    'rev': 'master',
    #},
    #'formula': {
    #    'git': 'https://github.com/siraben/tree-sitter-formula',
    #    'rev': 'master',
    #},
    #'fortran': {
    #    'git': 'https://github.com/stadelmanma/tree-sitter-fortran',
    #    'rev': 'master',
    #},
    #'gitattributes': {
    #    'git': 'https://github.com/ObserverOfTime/tree-sitter-gitattributes',
    #    'rev': 'master',
    #},
    #'gitignore': {
    #    'git': 'https://github.com/shunsambongi/tree-sitter-gitignore',
    #    'rev': 'main',
    #},
    #'gleam': {
    #    'git': 'https://github.com/gleam-lang/tree-sitter-gleam',
    #    'rev': 'main',
    #},
    #'glsl': {
    #    'git': 'https://github.com/theHamsta/tree-sitter-glsl',
    #    'rev': 'master',
    #    'run_npm': 'root',
    #},
    #'gomod': {
    #    'git': 'https://github.com/camdencheek/tree-sitter-go-mod',
    #    'rev': 'main',
    #},
    #'gowork': {
    #    'git': 'https://github.com/omertuc/tree-sitter-go-work',
    #    'rev': 'main',
    #},
    #'go': {
    #    'git': 'https://github.com/tree-sitter/tree-sitter-go',
    #    'rev': 'master',
    #},
    #'graphql': {
    #    'git': 'https://github.com/bkegley/tree-sitter-graphql',
    #    'rev': 'master',
    #},
    #'hack': {
    #    'git': 'https://github.com/slackhq/tree-sitter-hack',
    #    'rev': 'main',
    #},
    #'haskell': {
    #    'git': 'https://github.com/tree-sitter/tree-sitter-haskell',
    #    'rev': 'master',
    #},
    #'hcl': {
    #    'git': 'https://github.com/MichaHoffmann/tree-sitter-hcl',
    #    'rev': 'main',
    #},
    #'html': {
    #    'git': 'https://github.com/tree-sitter/tree-sitter-html',
    #    'rev': 'master',
    #},
    'ini': {
        'git': 'https://github.com/justinmk/tree-sitter-ini',
        'rev': 'v1.1.1',
    },
    #'java': {
    #    'git': 'https://github.com/tree-sitter/tree-sitter-java',
    #    'rev': 'master',
    #},
    'javascript': {
        'git': 'https://github.com/tree-sitter/tree-sitter-javascript',
        'rev': 'v0.21.0',
    },
    #'jq': {'git': 'https://github.com/flurie/tree-sitter-jq', 'rev': 'main'},
    #'json': {
    #    'git': 'https://github.com/tree-sitter/tree-sitter-json',
    #    'rev': 'master',
    #},
    #'json5': {
    #    'git': 'https://github.com/Joakker/tree-sitter-json5',
    #    'rev': 'master',
    #},
    #'julia': {
    #    'git': 'https://github.com/tree-sitter/tree-sitter-julia',
    #    'rev': 'master',
    #},
    #'kotlin': {
    #    'git': 'https://github.com/fwcd/tree-sitter-kotlin',
    #    'rev': 'main',
    #},
    #'lalrpop': {
    #    'git': 'https://github.com/traxys/tree-sitter-lalrpop',
    #    'rev': 'master',
    #},
    #'latex': {
    #    'git': 'https://github.com/latex-lsp/tree-sitter-latex',
    #    'rev': 'master',
    #},
    #'lean': {'git': 'https://github.com/Julian/tree-sitter-lean', 'rev': 'main'},
    #'llvm_mir': {
    #    'git': 'https://github.com/Flakebi/tree-sitter-llvm-mir',
    #    'rev': 'master',
    #},
    #'llvm': {
    #    'git': 'https://github.com/benwilliamgraham/tree-sitter-llvm',
    #    'rev': 'main',
    #},
    #'lua': {
    #    'git': 'https://github.com/Azganoth/tree-sitter-lua',
    #    'rev': 'master',
    #},
    #'m68k': {
    #    'git': 'https://github.com/grahambates/tree-sitter-m68k',
    #    'rev': 'master',
    #},
    #'make': {
    #    'git': 'https://github.com/alemuller/tree-sitter-make',
    #    'rev': 'main',
    #},
    ##'markdown': {
    ##    'git': 'https://github.com/ikatyang/tree-sitter-markdown',
    ##    'rev': 'master',
    ##},
    'markdown': {
        'git': 'https://github.com/tree-sitter-grammars/tree-sitter-markdown',
        'rev': 'v0.2.3',
        'path': 'tree-sitter-markdown',
    },
    'markdown_inline': {
        'git': 'https://github.com/tree-sitter-grammars/tree-sitter-markdown',
        'rev': 'v0.2.3',
        'path': 'tree-sitter-markdown-inline',
    },
    ##'meson': {
    ##    'git': 'https://github.com/staysail/tree-sitter-meson',
    ##    'rev': 'main',
    ##},
    'meson': {
        'git': 'https://github.com/Decodetalkers/tree-sitter-meson',
        'rev': '1.2.1',
    },
    #'nix': {
    #    'git': 'https://github.com/cstrahan/tree-sitter-nix',
    #    'rev': 'master',
    #},
    #'objc': {
    #    'git': 'https://github.com/jiyee/tree-sitter-objc',
    #    'rev': 'main',
    #    'run_npm': 'root',
    #},
    #'ocaml_interface': {
    #    'git': 'https://github.com/tree-sitter/tree-sitter-ocaml',
    #    'rev': 'master',
    #    'path': 'interface',
    #},
    #'ocaml': {
    #    'git': 'https://github.com/tree-sitter/tree-sitter-ocaml',
    #    'rev': 'master',
    #    'path': 'ocaml',
    #},
    #'org': {'git': 'https://github.com/milisims/tree-sitter-org', 'rev': 'main'},
    #'pascal': {
    #    'git': 'https://github.com/Isopod/tree-sitter-pascal',
    #    'rev': 'master',
    #},
    #'perl': {
    #    'git': 'https://github.com/tree-sitter-perl/tree-sitter-perl',
    #    'rev': 'master',
    #},
    ##'perl': {
    ##    'git': 'https://github.com/ganezdragon/tree-sitter-perl',
    ##    'rev': 'main',
    ##},
    #'pgn': {
    #    'git': 'https://github.com/rolandwalker/tree-sitter-pgn',
    #    'rev': 'master',
    #},
    #'php': {
    #    'git': 'https://github.com/tree-sitter/tree-sitter-php',
    #    'rev': 'master',
    #},
    #'pod': {
    #    'git': 'https://github.com/tree-sitter-perl/tree-sitter-pod',
    #    'rev': 'main',
    #},
    #'PowerShell': {
    #    #'git': 'https://github.com/PowerShell/tree-sitter-PowerShell',
    #    #'rev': 'master',
    #    # PowerShell is currently broken, but fixed in a fork. See:
    #    # https://github.com/PowerShell/tree-sitter-PowerShell/pull/7/files
    #    'git': 'https://github.com/JamesWTruher/tree-sitter-PowerShell',
    #    'rev': 'd26a8d65c59838496456ea96a0b34fed5c15c2ec',
    #},
    #'proto': {
    #    'git': 'https://github.com/mitchellh/tree-sitter-proto',
    #    'rev': 'main',
    #},
    #'python': {
    #    'git': 'https://github.com/tree-sitter/tree-sitter-python',
    #    'rev': 'master',
    #},
    #'qmljs': {
    #    'git': 'https://github.com/yuja/tree-sitter-qmljs',
    #    'rev': 'master',
    #    'run_npm': 'root',
    #},
    #'query': {
    #    'git': 'https://github.com/nvim-treesitter/tree-sitter-query',
    #    'rev': 'master',
    #},
    #'r': {'git': 'https://github.com/r-lib/tree-sitter-r', 'rev': 'main'},
    #'racket': {
    #    'git': 'https://github.com/6cdh/tree-sitter-racket',
    #    'rev': 'main',
    #},
    #'rasi': {'git': 'https://github.com/Fymyte/tree-sitter-rasi', 'rev': 'main'},
    #'re2c': {
    #    'git': 'https://github.com/alemuller/tree-sitter-re2c',
    #    'rev': 'main',
    #},
    #'regex': {
    #    'git': 'https://github.com/tree-sitter/tree-sitter-regex',
    #    'rev': 'master',
    #},
    #'rego': {
    #    'git': 'https://github.com/FallenAngel97/tree-sitter-rego',
    #    'rev': 'master',
    #},
    #'rst': {'git': 'https://github.com/stsewd/tree-sitter-rst', 'rev': 'master'},
    #'ruby': {
    #    'git': 'https://github.com/tree-sitter/tree-sitter-ruby',
    #    'rev': 'master',
    #},
    #'rust': {
    #    'git': 'https://github.com/tree-sitter/tree-sitter-rust',
    #    'rev': 'master',
    #},
    #'scala': {
    #    'git': 'https://github.com/tree-sitter/tree-sitter-scala',
    #    'rev': 'master',
    #},
    #'scheme': {
    #    'git': 'https://github.com/6cdh/tree-sitter-scheme',
    #    'rev': 'main',
    #},
    #'scss': {
    #    'git': 'https://github.com/serenadeai/tree-sitter-scss',
    #    'rev': 'master',
    #},
    #'sexp': {
    #    'git': 'https://github.com/AbstractMachinesLab/tree-sitter-sexp',
    #    'rev': 'main',
    #},
    #'apex': {
    #    'git': 'https://github.com/aheber/tree-sitter-sfapex',
    #    'rev': 'main',
    #    'path': 'apex',
    #},
    #'soql': {
    #    'git': 'https://github.com/aheber/tree-sitter-sfapex',
    #    'rev': 'main',
    #    'path': 'soql',
    #},
    #'sosl': {
    #    'git': 'https://github.com/aheber/tree-sitter-sfapex',
    #    'rev': 'main',
    #    'path': 'sosl',
    #},
    #'smali': {
    #    'git': 'https://github.com/amaanq/tree-sitter-smali',
    #    'rev': 'master',
    #},
    ##'smali': {
    ##    'git': 'https://git.sr.ht/~yotam/tree-sitter-smali',
    ##    'rev': 'main',
    ##},
    #'sourcepawn': {
    #    'git': 'https://github.com/nilshelmig/tree-sitter-sourcepawn',
    #    'rev': 'main',
    #},
    #'sparql': {
    #    'git': 'https://github.com/BonaBeavis/tree-sitter-sparql',
    #    'rev': 'main',
    #},
    #'sql_bigquery': {
    #    'git': 'https://github.com/takegue/tree-sitter-sql-bigquery',
    #    'rev': 'main',
    #},
    #'sql': {
    #    'git': 'https://github.com/m-novikov/tree-sitter-sql',
    #    'rev': 'main',
    #},
    #'sqlite': {
    #    'git': 'https://github.com/dhcmrlchtdj/tree-sitter-sqlite',
    #    'rev': 'main',
    #},
    #'ssh_client_config': {
    #    'git': 'https://github.com/metio/tree-sitter-ssh-client-config',
    #    'rev': 'main',
    #},
    #'svelte': {
    #    'git': 'https://github.com/Himujjal/tree-sitter-svelte',
    #    'rev': 'master',
    #},
    #'swift': {
    #    'git': 'https://github.com/alex-pinkus/tree-sitter-swift',
    #    'rev': 'main',
    #},
    #'systemrdl': {
    #    'git': 'https://github.com/SystemRDL/tree-sitter-systemrdl',
    #    'rev': 'master',
    #},
    #'tablegen': {
    #    'git': 'https://github.com/Flakebi/tree-sitter-tablegen',
    #    'rev': 'master',
    #},
    #'thrift': {
    #    'git': 'https://github.com/duskmoon314/tree-sitter-thrift',
    #    'rev': 'main',
    #},
    ##'toml': {
    ##    'git': 'https://github.com/ikatyang/tree-sitter-toml',
    ##    'rev': 'master',
    ##},
    #'turtle': {
    #    'git': 'https://github.com/BonaBeavis/tree-sitter-turtle',
    #    'rev': 'main',
    #},
    #'twig': {'git': 'https://github.com/gbprod/tree-sitter-twig', 'rev': 'main'},
    #'typescript': {
    #    'git': 'https://github.com/tree-sitter/tree-sitter-typescript',
    #    'rev': 'master',
    #    'path': 'typescript',
    #    'run_npm': 'root',
    #},
    #'tsx': {
    #    'git': 'https://github.com/tree-sitter/tree-sitter-typescript',
    #    'rev': 'master',
    #    'path': 'tsx',
    #    'run_npm': 'root',
    #},
    #'verilog': {
    #    'git': 'https://github.com/tree-sitter/tree-sitter-verilog',
    #    'rev': 'master',
    #},
    #'vhdl': {
    #    'git': 'https://github.com/alemuller/tree-sitter-vhdl',
    #    'rev': 'main',
    #},
    #'vue': {
    #    'git': 'https://github.com/ikatyang/tree-sitter-vue',
    #    'rev': 'master',
    #},
    #'wast': {
    #    'git': 'https://github.com/wasm-lsp/tree-sitter-wasm',
    #    'rev': 'main',
    #    'path': 'wast',
    #},
    #'wat': {
    #    'git': 'https://github.com/wasm-lsp/tree-sitter-wasm',
    #    'rev': 'main',
    #    'path': 'wat',
    #},
    #'wgsl': {
    #    'git': 'https://github.com/mehmetoguzderin/tree-sitter-wgsl',
    #    'rev': 'main',
    #},
    #'yaml': {
    #    'git': 'https://github.com/ikatyang/tree-sitter-yaml',
    #    'rev': 'master',
    #},
    #'yang': {
    #    'git': 'https://github.com/Hubro/tree-sitter-yang',
    #    'rev': 'master',
    #},
    #'zig': {
    #    'git': 'https://github.com/maxxnino/tree-sitter-zig',
    #    'rev': 'main',
    #},
}

if get_option('generate_parsers')
    subdir('generate')
else
    subdir('shipped')
endif

parser_table = custom_target(
    'parser-table',
    command: [
        './build_table.sh',
        '@OUTDIR@',
    ] + e_external_grammars.keys(),
    output: [
        'e-parser-table.c',
        'e-parser-table.h',
    ],
)

# pack all the parsers into a single library
tree_sitter_parsers = static_library(
    'tree-sitter-parsers',
    tree_sitter_parsers_source,
    dependencies: tree_sitter_dep,
    c_args: [
        # for 'null character(s) preserved in literal'. ref https://github.com/tree-sitter/tree-sitter-go/issues/132
        '-Wno-error',
        '-Wno-parentheses',
        '-Wno-pedantic',
        '-Wno-empty-body',
        '-Wno-unknown-pragmas',
        '-Wno-unused-label',
        '-Wno-unused-parameter',
        '-Wno-unused-function',
        '-Wno-unused-variable',
        '-Wno-unused-but-set-variable',
        '-Wno-sign-compare',
        '-Wno-implicit-fallthrough',
    ],
)
# pack all the parsers into a single library
e_parsers = static_library(
    'e_parser',
    parser_table,
    link_whole: tree_sitter_parsers,
    include_directories: parser_include,
    dependencies: tree_sitter_dep,
    build_by_default: true,
)

e_parsers_dep = declare_dependency(
    include_directories: [parser_include],
    sources: [parser_table],
    link_with: e_parsers,
    dependencies: tree_sitter_dep,
)
