#subdir('simple_editor')
e_src_main = files('main.c')
e_src = files('command.c', 'konstrukt.c', 'utils.c', 'list.c', 'struktur.c', 'dokument.c', 'rand_gen.c', 'klient.c')
#e_src = files('simple_editor.c', 'random.c')
#'expose/expose.c',
#'tree/tree-rope.c',
#'tree/tree.c',
#'client.c',
#'daemon.c',
#'document.c',
#'e.c',
