tree_sitter_parsers_source = [
    # c
    files(
        'c/src/parser.c',
    ),
    # ecmd
    files(
        'ecmd/src/parser.c',
    ),
    # ini
    files(
        'ini/src/parser.c',
    ),
    # javascript
    files(
        'javascript/src/parser.c',
        'javascript/src/scanner.c',
    ),
    # meson
    files(
        'meson/src/parser.c',
    ),
]
