tree_sitter_parsers_source = [
    # c
    files(
        'c/src/parser.c',
        'c/src/tree_sitter/parser.h',
    ),
    # ecmd
    files(
        'ecmd/src/parser.c',
        'ecmd/src/tree_sitter/parser.h',
    ),
    # ini
    files(
        'ini/src/parser.c',
        'ini/src/tree_sitter/parser.h',
    ),
    # javascript
    files(
        'javascript/src/parser.c',
        'javascript/src/scanner.c',
        'javascript/src/tree_sitter/parser.h',
        'javascript/src/tree_sitter/parser.h',
    ),
    # markdown
    files(
        'markdown/tree-sitter-markdown/src/parser.c',
        'markdown/tree-sitter-markdown/src/scanner.c',
        'markdown/tree-sitter-markdown/src/tree_sitter/parser.h',
        'markdown/tree-sitter-markdown/src/tree_sitter/parser.h',
    ),
    # markdown_inline
    files(
        'markdown_inline/tree-sitter-markdown-inline/src/parser.c',
        'markdown_inline/tree-sitter-markdown-inline/src/scanner.c',
        'markdown_inline/tree-sitter-markdown-inline/src/tree_sitter/parser.h',
        'markdown_inline/tree-sitter-markdown-inline/src/tree_sitter/parser.h',
    ),
    # meson
    files(
        'meson/src/parser.c',
        'meson/src/tree_sitter/parser.h',
    ),
]
