option(
    'single_line_nodes',
    type: 'boolean',
    value: false,
    description: 'makes sure that nodes never span multiple lines',
)
option(
    'test',
    type: 'boolean',
    value: false,
    description: 'Run tests',
)
option(
    'fuzzer',
    type: 'boolean',
    value: false,
    description: 'Build libFuzzer target for librope',
)
option(
    'fuzzer_timeout',
    type: 'integer',
    value: 10,
    description: 'set the fuzzer timeout',
)
