option(
    'test',
    type: 'boolean',
    value: false,
    description: 'Run tests',
)
option(
    'fuzzer',
    type: 'boolean',
    value: false,
    description: 'Build libFuzzer target for librope',
)
option(
    'fuzzer_timeout',
    type: 'integer',
    value: 10,
    description: 'set the fuzzer timeout',
)
option(
    'inline_leaves',
    type: 'boolean',
    value: true,
    description: 'Enable inline leaves in rope implementation. Disabling is useful for debugging.',
)
