librope_sources = files(
    'cursor/editing.c',
    'cursor/lifecycle.c',
    'cursor/list.c',
    'cursor/movement.c',
    'cursor/query.c',
    'iterator.c',
    'node/info.c',
    'node/insert.c',
    'node/mutation.c',
    'node/navigation.c',
    'node/node.c',
    'node/tags.c',
    'pool.c',
    'range.c',
    'rope.c',
    'util.c',
    'str.c',
)
